# p2p-rfs

./: .gitignore  CONTRIBUTING.md  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/proptest-regressions/: peer_registry.txt
frontend/src-tauri/src/: cert_manager.rs  commands.rs  discovery.rs  events.rs  lib.rs  main.rs  p2p_engine.rs  peer_registry.rs  settings.rs  state.rs
frontend/src-tauri/tests/: p2p_properties.proptest-regressions  p2p_properties.rs
frontend/src/__tests__/property/: history.property.test.ts  progress.property.test.ts  settings.property.test.ts
frontend/src/components/: TransferProgress.tsx
frontend/src/hooks/: useAppState.ts  useP2PEngine.ts  useTransfer.ts
frontend/src/providers/: AppStateProvider.tsx
frontend/src/screens/: DashboardScreen.tsx  DownloadScreen.tsx  HistoryScreen.tsx  SettingsScreen.tsx  UploadScreen.tsx
frontend/src/services/: p2pBridge.ts  tauriBridge.ts
proto/: messages.proto
server/: Cargo.toml
server/integrity/: Cargo.toml
server/integrity/src/: lib.rs
server/integrity/tests/: property_integrity.rs
server/observability/: Cargo.toml
server/observability/src/: lib.rs
server/observability/tests/: property_observability.rs
server/protocol/: Cargo.toml  build.rs
server/protocol/src/: lib.rs
server/protocol/tests/: property_round_trip.rs  property_version.rs
server/rate_control/: Cargo.toml
server/rate_control/src/: lib.rs
server/src/: db.rs  lib.rs  retry.rs  types.rs
server/storage/: Cargo.toml
server/storage/src/: lib.rs
server/storage/tests/: property_storage.rs
server/tests/: integration_transfer.rs  property_retry.rs
server/transfer/: Cargo.toml
server/transfer/src/: lib.rs  manager.rs  rate_control.rs  session.rs
server/transfer/tests/: property_manager.proptest-regressions  property_manager.rs  property_rate_control.rs  property_session.rs
