[workspace]
members = [
    ".",
    "protocol",
    "transfer",
    "integrity",
    "storage",
    "rate_control",
    "observability",
]
resolver = "2"

[package]
name = "file-sharing-server"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "protocol" }
transfer = { path = "transfer" }
integrity = { path = "integrity" }
storage = { path = "storage" }
rate_control = { path = "rate_control" }
observability = { path = "observability" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
quinn = "0.11"
prost = "0.13"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
