[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
storage = { path = "../storage" }
integrity = { path = "../integrity" }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
